# tmc_manipulation

tmc_collision_environment/: CHANGELOG.rst  CMakeLists.txt  package.xml
tmc_collision_environment/examples/: add_static_collision_object.py  cone.stl
tmc_collision_environment/src/: attached_object_publisher.cpp  attached_object_publisher.hpp  collision_environment_server.cpp  collision_environment_server.hpp  utils.cpp  utils.hpp
tmc_collision_environment/test/: test_attached_object_publisher.cpp  test_collision_environment.cpp  utils.cpp  utils.hpp
tmc_collision_environment/tmc_collision_environment/: collision_object_factory.py  collision_object_register.py
tmc_safe_pose_changer/: CHANGELOG.rst  CMakeLists.txt  package.xml
tmc_safe_pose_changer/src/: safe_pose_changer.cpp  safe_pose_changer.hpp  safe_pose_changer_node.cpp
tmc_safe_pose_changer/test/: safe_pose_changer-test.cpp
